--- a/src/maketoc.css
+++ b/src/maketoc.css
@@ -1,4 +1,8 @@
 #mktc-container {
+    position: fixed;
+    top: 2rem;
+    left: 2rem;
+
     /*! tailwindcss v2.2.2 | MIT License | https://tailwindcss.com */
 
     /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
@@ -556,7 +560,6 @@ Add the correct display in Chrome and Safari.
     }
 }
 
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
